[ui][api] implement barcode scanning
